--- a/.gitignore
+++ b/.gitignore
@@ -442,3 +442,4 @@ __pycache__/
 
 
 # End of https://www.gitignore.io/api/java,macos,windows,intellij,visualstudio,visualstudiocode
+.idea/workspace.xml
