--- a/.gitignore
+++ b/.gitignore
@@ -443,3 +443,4 @@ __pycache__/
 
 # End of https://www.gitignore.io/api/java,macos,windows,intellij,visualstudio,visualstudiocode
 .idea/workspace.xml
+WordRepeater.iml
